--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
       - file: db/changelog/db.changelog-release1.0.0.yaml
+  - include:
+      - file: db/changelog/db.changelog-release1.0.1.yaml
